Ingress-Rules/frontend_rules.yaml
--- # ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ${TENANT_ID}-fe-first-level-rules
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     nginx.ingress.kubernetes.io/proxy-body-size: "0"
# spec:
#   rules:
#   - host: apps.aviot.it
#     http:
#         paths:
#           - path: /agri
#             pathType: Prefix
#             backend:
#               serviceName: aviot-fe
#               servicePort: 8080
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-fe-second-level-rules
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: apps.aviot.it
      http:
        paths:
          - path: /${TENANT_ID}/fe(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: aviot-fe
              servicePort: 8080
          - path: /${TENANT_ID}/janus(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: janus-gateway
              servicePort: 8088
          - path: /${TENANT_ID}/dbapp(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: dnsserverapp
              servicePort: 4000
          - path: /${TENANT_ID}/wss(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: wss
              servicePort: 80
