Ingress-Rules/ingress_rules_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
      - ${TENANT_ID}.aviot.it
      secretName: ${TENANT_ID}-letsencrypt-cert-tls
  rules:
    - host: ${TENANT_ID}.aviot.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: aviot-fe
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-janus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
      - ${TENANT_ID}.aviot.it
      secretName: ${TENANT_ID}-letsencrypt-cert-tls
  rules:
    - host: ${TENANT_ID}.aviot.it
      http:
        paths:
          - path: /janus(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: janus-gateway
              servicePort: 8088
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-wss
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
      - ${TENANT_ID}.wss.aviot.it
      secretName: ${TENANT_ID}-letsencrypt-cert-tls
  rules:
    - host: ${TENANT_ID}.wss.aviot.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: wss
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-controller
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
      - ${TENANT_ID}.controller.aviot.it
      secretName: ${TENANT_ID}-letsencrypt-cert-tls
  rules:
    - host: ${TENANT_ID}.controller.aviot.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: wss
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TENANT_ID}-dbapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
      - ${TENANT_ID}.aviot.it
      secretName: ${TENANT_ID}-letsencrypt-cert-tls
  rules:
    - host: ${TENANT_ID}.aviot.it
      http:
        paths:
          - path: /dbapp(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: dnsserverapp
              servicePort: 4000
